# pickmeup

./: .env.example  .gitignore  README.md  _interchanges_csv_for_inspection_only.csv  pyproject.toml  route_apis.ipynb
.github/workflows/: checks.yml  refresh-gtfs-snapshot.yml  temp-validate-live-gtfs.yml  validate-browser-render.yml  validate-static-explorer.yml
data/curated/: interchange_candidate_dispositions.json
docs/: app.js  gtfs_2024_to_2026.md  index.html  interchange_candidate_validation.md  map-config.js  map-features.css  map-features.js  map-refinements.js  map-style-lab.css  map-style-lab.js  map_style_experiments.md  routing-costs.css  routing-costs.js  routing-lab-ui.css  routing-lab-ui.js  routing-lab.css  routing-lab.js  station-model.js  styles.css  transit-graph-experiments.md
docs/data/: interchanges.json  manifest.json
docs/data/snapshots/079a1b5d72cb/: frequencies.json  patterns.json  quality.json  routes.json  shapes.geojson  stops.geojson  summary.json
notebooks/: original_exploration.ipynb
notebooks/legacy/: interchanges.pickle
src/pickmeup/: __init__.py
src/pickmeup/gtfs/: __init__.py  __main__.py  curated.py  errors.py  feed.py  plotting.py  quality.py  source.py  static_export.py  time.py
tests/: README.md  conftest.py  map_style_lab.test.js  pages_snapshot.test.js  routing_costs.test.js  routing_lab.test.js  routing_lab_ui.test.js  station_model.test.js  test_browser_interchanges.py  test_gtfs_cli.py  test_gtfs_feed.py  test_gtfs_static_export.py  test_gtfs_time.py
